# osmgraphing

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  index.html  notes.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  feature.md  testing.md
.github/workflows/: rust.yml
artifacts/: info.md
benches/: routing.rs
examples/: astar.rs  dijkstra.rs  exploration.rs  parser.rs
examples/playground/: actix.rs  dijkstra.rs  edge_containers.rs  graph.rs  logging.rs  multithreading.rs  nd_triangulation.rs  parser.rs  pipes_and_filters.rs  random.rs  server.rs  xml_reader.rs
res/graphs/: random.txt  small.txt
resources/: blueprint.yaml  index.html  pbf_to_fmi.yaml
resources/bidirectional_bait/: all_25.route-pairs  fmi.yaml
resources/braess/: proto_routes.csv
resources/configs/: bidirectional-bait.fmi.yaml  blueprint.yaml  default.json  default.yaml  fmi.yaml  isle-of-man.ch.fmi.yaml  isle-of-man.fmi.yaml  isle-of-man.pbf.yaml  isle-of-man_2020-03-14.ch.fmi.yaml  isle-of-man_2020-03-14.fmi.yaml  isle-of-man_2020-03-14.pbf.yaml  pbf-to-fmi.yaml  pbf.yaml  pbf_to_fmi.yaml  schema.yaml  simple-stuttgart.fmi.yaml  small.ch.fmi.yaml  small.fmi.yaml
resources/css/: main.css
resources/isle_of_man_2020-03-14/: 100.ch.fmi.route-pairs  100.fmi.route-pairs  100.osm.pbf.route-pairs  10_000.route-pairs  10_000_eval.route-pairs  blub.csv  ch.fmi.yaml  fmi.yaml  fmi_to_ch.yaml  osm.pbf.yaml  pbf_to_ch.yaml  pbf_to_fmi.yaml
resources/isle_of_man_2020-03-14/balancing/: config.yaml  init.yaml  iteration.yaml
resources/js/: main.js
resources/maps/: bidirectional-bait.fmi  bidirectional_bait.fmi  isle-of-man_2019-09-05.osm.pbf  isle-of-man_2020-03-14.osm.pbf  routing.fmi  simple-stuttgart.fmi  simple_stuttgart.fmi  small.ch.fmi  small.fmi
resources/osm/: small.fmi
resources/routes/: bidirectional-bait.fmi.route-pairs  isle-of-man_2020-03-14.ch.fmi.route-pairs  isle-of-man_2020-03-14.fmi.route-pairs  isle-of-man_2020-03-14.pbf.route-pairs  simple-stuttgart.fmi.route-pairs  small.ch.fmi.route-pairs  small.fmi.route-pairs
resources/saarland_2020-07-30/: 1.route-pairs  10_000.route-pairs  10_000_eval.route-pairs  ch.fmi.yaml  fmi.yaml  fmi_to_ch.yaml  osm.pbf.yaml  pbf_to_ch.yaml  pbf_to_fmi.yaml
resources/saarland_2020-07-30/balancing/: config.yaml  init.yaml  iteration.yaml
resources/simple_stuttgart/: all_31.route-pairs  fmi.yaml  graph.fmi  normalized_fmi.yaml
resources/small/: all_43.ch.fmi.route-pairs  all_43.fmi.route-pairs  ch.fmi.yaml  fmi.yaml  graph.ch.fmi
resources/stuttgart-regbez_2019-09-07/: 10_000.route-pairs  ch.fmi.yaml  fmi.yaml  osm.pbf.yaml  pbf_to_fmi.yaml
resources/stuttgart-regbez_2019-09-07/balancing/: config.yaml  init.yaml  iteration.yaml
scripts/: benches.sh  build.sh  echo_gitignore.sh  flamegraph.bash  rebuild_route-pairs.bash  rebuild_routes.bash  test.bash  travis.sh
scripts/balancer-simulation/: balancer_0.yaml  balancer_i.yaml  pbf_to_fmi.yaml  run.sh  visualization.py  writing_routes.yaml
scripts/balancer-simulation/visualization/: __main__.py
scripts/balancing/: README.md
scripts/balancing/visualization/: __main__.py
scripts/balancing/visualizer/: __main__.py
scripts/braess/: gen_proto_routes.sh  run_sim.sh  run_visualization.sh  visualization.py
scripts/general/: create_gitignore.sh  travis.sh
scripts/travis/: build.sh  deploy.sh  helper.sh  script.sh  test.sh
src/: approximating.rs  configs.rs  defaults.rs  dijkstra.rs  err.rs  graph.rs  helpers.rs  lib.rs  logging.rs  main.rs  parser.rs  reader.rs  server.rs
src/configs/: balancing.rs  building.rs  categories.rs  evaluating_balance.rs  graph.rs  mod.rs  raw.rs  routing.rs
src/configs/implementation/: balancing.rs  mod.rs  raw.rs  routing.rs
src/configs/parsing/: mod.rs  vehicles.rs
src/configs/writing/: mod.rs  routing.rs  smarts.rs
src/graph/: mod.rs
src/helpers/: algebra.rs  approx.rs  err.rs  mod.rs
src/io/: generating.rs  mod.rs  writing.rs
src/io/parsing/: fmi.rs  mod.rs  pbf.rs
src/io/writing/: evaluating_balance.rs  mod.rs  smarts.rs
src/multi_ch_constructor/: configs.rs  defaults.rs  mod.rs
src/network/: building.rs  defaults.rs  geo.rs  mod.rs  routes.rs  units.rs
src/network/graph/: building.rs  indexing.rs  mod.rs
src/osm/: fmi.rs  geo.rs  mod.rs  parser.rs  parsing.rs  pbf.rs  reader.rs  xml.rs
src/osm/pbf/: mod.rs
src/osm/reader/: mod.rs  pbf.rs  xml.rs
src/parser/: mod.rs
src/parsing/: fmi.rs  mod.rs  pbf.rs
src/routing/: astar.rs  dijkstra.rs  explorating.rs  exploration.rs  factory.rs  graph.rs  mod.rs  paths.rs  shortest_path.rs
src/routing/astar/: mod.rs  paths.rs
src/routing/exploration/: cyclops.rs  mod.rs
src/routing/graph/: id.rs  idx.rs  mod.rs
src/routing/network/: building.rs  mod.rs
src/ui/: server.rs
src/ui/client/: code404.html  (+3 more)
src/units/: geo.rs  length.rs  mod.rs  primitives.rs  speed.rs  time.rs
static_resources/js/: geoJson.js  jquery.js  main.js
tests/: asdf.rs  asdf_main.rs  bidirectional_bait.rs  bidirectional_bait_main.rs  configs.rs  custom_main.rs  examples_main.rs  isle_of_man.rs  isle_of_man_main.rs  main.rs  parser.rs  saarland_main.rs  simple_stuttgart.rs  simple_stuttgart_main.rs  simple_stuttgart_normalized_main.rs  small.rs  small_main.rs  stuttgart_regbez_main.rs  units.rs
tests/asdf/: parsing.rs
tests/bidirectional_bait/: parsing.rs
tests/configs/: mod.rs
tests/custom/: mod.rs
tests/examples/: mod.rs
tests/helpers/: components.rs  mod.rs
tests/isle_of_man/: mod.rs  parsing.rs
tests/maps/: asdf.rs
tests/network/: graph.rs  mod.rs
tests/osm/: fmi.rs  mod.rs  pbf.rs  support.rs  xml.rs
tests/parser/: graph.rs  mod.rs
tests/parsing/: fmi.rs  general.rs  mod.rs  pbf.rs
tests/routing/: astar.rs  dijkstra.rs  fastest.rs  mod.rs  shortest.rs
tests/saarland/: parsing.rs
tests/simple_stuttgart/: parsing.rs
tests/simple_stuttgart_normalized/: parsing.rs
tests/small/: parsing.rs
tests/stuttgart_regbez/: parsing.rs
(+184 files in other folders)
