# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = 'osmgraphing' # lib.rs
default-run = 'osmgraphing' # bin/osmgraphing.rs
# Changing this version in a branch 'release' and pushing it to
# GitHub will lead to publishing it automatically to crates.io.
# Hence do not forget updating Unreleased in CHANGELOG.md.
version = '0.13.0' # !!!
description = 'Playing around with graphs created via parsing OpenStreetMap data'
edition = '2018'

authors = [
    'Parga Cacheiro, Dominic (dominic.parga@gmail.com)',
]
repository = 'https://github.com/dominicparga/osmgraphing'
readme = 'README.md'
keywords = ['osm', 'route', 'routing', 'pbf', 'xml']
categories = ['algorithms', 'data-structures', 'parser-implementations', 'parsing']
license = 'Apache-2.0'

build = "build.rs"


[features]
default = []

# TODO different test-lengths
# https://testing.googleblog.com/2010/12/test-sizes.html
custom = []
'gpl-3.0' = []


[[bin]]
name = 'osmgraphing' # bin/osmgraphing.rs
path = 'src/bin/osmgraphing.rs'

[[bin]]
name = 'balancer'
path = 'src/bin/balancer/mod.rs'
required-features = ['gpl-3.0']

[[bin]]
name = 'multi-ch-constructor'
path = 'src/bin/multi-ch-constructor.rs'
required-features = ['gpl-3.0']


[[example]]
name = 'parser'
path = 'examples/parser.rs'

[[example]]
name = 'dijkstra'
path = 'examples/dijkstra.rs'

[[example]]
name = 'exploration'
path = 'examples/exploration.rs'
required-features = ['gpl-3.0']


[[example]]
name = 'playground_actix'
path = 'examples/playground/actix.rs'

[[example]]
name = 'playground_edge-containers'
path = 'examples/playground/edge_containers.rs'

[[example]]
name = 'playground_graph'
path = 'examples/playground/graph.rs'

[[example]]
name = 'playground_multithreading'
path = 'examples/playground/multithreading.rs'

[[example]]
name = 'playground_nd-triangulation'
path = 'examples/playground/nd_triangulation.rs'

[[example]]
name = 'playground_pipes_and_filters'
path = 'examples/playground/pipes_and_filters.rs'

[[example]]
name = 'playground_random'
path = 'examples/playground/random.rs'

[[example]]
name = 'playground_xml_reader'
path = 'examples/playground/xml_reader.rs'


[[bench]]
name = 'routing'
harness = false


[dependencies]
chrono = '0.4' # date and time
clap = '2.33' # cmdline-parsing
env_logger = '0.6' # logging for external use, e.g. main.rs and examples
kissunits = { git = 'https://github.com/dominicparga/kissunits', branch = 'nightly' } # units like Meters or Coordinate
log = '0.4' # logging for internal use, e.g. lib.rs
nalgebra = '0.21' # vectors and matrics
nd-triangulation = '0.3' # CGAL for convex-hulls
osmpbfreader = '0.13' # read osm.pbf-files
# progressing = '2' # progress-bar
progressing = { git = 'https://github.com/dominicparga/progressing', branch = 'nightly' } # progress-bar
rand = '0.7' # generate random numbers
rand_pcg = '0.2' # generate random numbers
serde = '1' # serialization
serde_yaml = '0.8' # (de-)serialization
smallvec = '1' # inlining small vecs


[dev-dependencies]
actix-rt = '0.2' # backend-server
actix-web = '1' # backend-server
criterion = '0.3' # benchmarking
futures = '0.1' # backend-server
quick-xml = '0.14' # read xml-files
